# callprofiler

./:  !LOG_FILE!  .claudeignore  .gitignore  .pipeline-tmp.txt  AGENTS.md  ARCHITECTURE_SCHEMA.html  ARCHITECTURE_v3.md  ARCHITECTURE_v4.md  ARCHITECTURE_v5.md  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  CONTINUITY.md  DASHBOARD_REDESIGN_REPORT.md  DASHBOARD_TESTING.md  DASHBOARD_VERIFICATION_REPORT.md  DEVELOPMENT_PLAN.md  DYNAMIC_TOKEN_BUDGET_PLAN.md  FINAL_REPORT_DASHBOARD_LIVE_UPDATES.md  Makefile  OPTIMIZATION.md  README.md  ROADMAP.md  RUN_STAGE1.md  STRATEGIC_PLAN_v4.md  _test_save.py  agent_backlog.json  biography-run.bat  build-book-and-profiles.bat  cleanup-log.txt  cleanup.bat  cleanup.py  commit.bat  dash-check.bat  dash.bat  dash_check.py  dashboard-plan.md  diag.bat  diag.py  emergency-save.bat  (+32 more)
.agent_runs/: run.log.jsonl
.claude/: OPTIMIZATION.md  settings.json  settings.local.json
.obsidian/: graph.json  workspace.json
configs/: base.yaml  features.yaml
docs/: context-window-analysis.md
memory/: business.md  decisions.md  roadmap.md
migrations/: add_analysis_trigger.sql
tests/: test_analysis_service.py  test_audio_migrate.py  test_biography_graph_bridge.py  test_bs_calibration.py  test_card_generator.py  test_cleanup.py  test_config_hf_token.py  test_dashboard_dossier.py  test_dashboard_export.py  test_dashboard_insight.py  test_dashboard_labels_ru.py  test_dashboard_server.py  test_dashboard_tools.py  test_db_hardening.py  test_ds1_data_integrity.py  test_event_bus.py  test_events_init.py  test_filename_parser.py  test_gigaam_runner.py  (+26 more)
(+186 files in other folders)
